# Pebble

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_CN.md
.github/workflows/: ci.yml
.omc/specs/: deep-interview-pebble.md
docs/superpowers/plans/: 2026-04-12-pebble-cross-platform-refactor.md  2026-04-13-windows-platform.md  2026-04-13-windows-terminal-tab-jump.md  2026-04-14-disable-context-menu.md  2026-04-14-message-preview-optimization.md  2026-04-14-subagent-lifecycle-hooks.md  2026-04-14-wezterm-paneid-binding.md  2026-04-15-simplified-permission-display.md  2026-04-15-tray-icon.md
docs/superpowers/specs/: 2026-04-12-pebble-cross-platform-refactor-design.md  2026-04-13-windows-platform-design.md  2026-04-14-disable-context-menu-design.md  2026-04-14-message-preview-optimization-design.md  2026-04-14-subagent-lifecycle-hooks-design.md  2026-04-14-wezterm-paneid-binding-design.md  2026-04-15-simplified-permission-display-design.md  2026-04-15-tray-icon-design.md
pebble-app/: generate_icon.py  index.html  package-lock.json  package.json
pebble-app/src/: App.css  App.tsx
pebble-app/src-tauri/: Cargo.toml  tauri.conf.json
pebble-app/src-tauri/capabilities/: default.json
pebble-app/src-tauri/icons/: icon.icns
pebble-app/src-tauri/scripts/: build-bridge.cjs
pebble-app/src-tauri/src/: lib.rs  main.rs  session.rs  transcript.rs  types.rs
pebble-app/src-tauri/src/adapter/: claude.rs  mod.rs
pebble-app/src-tauri/src/hook/: bridge.rs  mod.rs  server.rs
pebble-app/src-tauri/src/platform/: cwd.rs  discovery.rs  jump.rs  mod.rs  terminal.rs
