[package]
name = "pebble-app"
version = "0.1.0"
description = "Pebble - AI Coding Agent Monitor"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tiny_http = "0.12"
dirs = "6.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
cocoa = "0.26"

[features]
custom-protocol = ["tauri/custom-protocol"]
